# ai-monitor

./: .env.example  .gitignore  API.md  CLAUDE.md  DATABASE.md  README.md  run.sh
.claude/commands/: bug.md  deploy.md  feature.md  implement.md  initial-deploy.md  install.md  prime.md  redeploy.md
.claude/skills/: setup.md
.worklog/specs/completed/: fix-stale-active-sessions.md  fix-timestamp-timezone-offset.md  session-end-on-quit.md  tool-detail-splitpane-subagent-enrichment.md
backend/: pyproject.toml
backend/ai_monitor/: __init__.py  __main__.py  config.py  db.py  main.py  models.py  watcher.py
backend/ai_monitor/routes/: agents.py  dashboard.py  events.py  projects.py  sessions.py  tools.py
backend/ai_monitor/services/: event_processor.py  session_reaper.py  stats.py  transcript_parser.py
backend/tests/: conftest.py
backend/tests/features/: events.feature  project_detail.feature  session_search.feature  session_timeline.feature  sessions.feature  tools.feature
backend/tests/step_defs/: test_events.py  test_project_detail.py  test_session_search.py  test_session_timeline.py  test_sessions.py  test_tools.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAutoRefresh.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/pages/: Dashboard.tsx  ProjectDetail.tsx  Projects.tsx  (+1 more)
hooks/: install.sh  monitor-hook.sh
services/: install-service.sh
services/linux/: ai-monitor.service
services/macos/: com.ai-monitor.plist
services/windows/: install-service.ps1
(+19 files in other folders)
